# PPH

./: .dockerignore  .env.example  .env.test  .gitignore  README.md  compose.yaml  dockerfile  main.py  migration_process.txt  pyproject.toml  vercel.json
.github/workflows/: ci.yml
.vercel/: project.json
alembic/: env.py
alembic/versions/: 9b1b1db0f305_updating_to_async_environment.py  a0cde6e07fcf_add_users_table.py  abf8e3b3fffe_fix_users_table.py  bf3f13fc6749_add_new_customer_fields.py  d400d7460f68_updating_time_display.py
api/: config.py  database.py  enums.py  models.py  schemas.py  utils.py
api/routers/: customers.py  orders.py
api/security/: backend_auth.py  jwt_auth.py  password.py
api/security/middleware/: __init__.py  security_headers.py
api/services/: auth.py  customer_service.py  customers.py  email_service.py  orders.py  pages.py  password.py  password_service.py  user.py
frontend/: templates_config.py
frontend/routers/: auth.py  pages.py
frontend/security/: frontend_auth.py
frontend/static/: styles.css
frontend/static/js/: api.js  auth.js  base.js  create_order.js  edit_customer.js  edit_order.js  login.js
frontend/templates/: base.html  create_order.html  edit_customer.html  edit_order.html  index.html  login.html
frontend/templates/partials/: customers_table.html  orders_table.html
tests/: conftest.py  test_orders.py
