[project]
name = "pph"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.136.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.2",
    "python-dotenv>=1.2.2",
    "pytz>=2026.1.post1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
