[project]
name = "pph"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.136.0",
    "itsdangerous>=2.2.0",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "pytz>=2026.1.post1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-postgresql>=8.1.0",
    "ruff>=0.15.14",
]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = ["frontend/templates"]

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
